@startuml

package "models" {

  abstract class DAO {
    + inserir(obj)
    + listar() : list
    + listar_id(id)
    + atualizar(obj)
    + excluir(obj)
  }

  class BibliotecarioDAO {
    + inserir(b:Bibliotecario)
    + listar() : list<Bibliotecario>
    + listar_id(cpf:str) : Bibliotecario
    + atualizar(b:Bibliotecario)
    + excluir(b:Bibliotecario)
  }

  class UsuarioDAO {
    + inserir(u:Usuario)
    + listar() : list<Usuario>
    + listar_id(cpf:str) : Usuario
    + atualizar(u:Usuario)
    + excluir(u:Usuario)
  }

  class AutorDAO {
    + inserir(a:Autor)
    + listar() : list<Autor>
    + listar_id(id:int) : Autor
    + atualizar(a:Autor)
    + excluir(a:Autor)
  }

  class LivroDAO {
    + inserir(l:Livro)
    + listar() : list<Livro>
    + listar_id(codigo:int) : Livro
    + atualizar(l:Livro)
    + excluir(l:Livro)
  }

  class AutoriaDAO {
    + inserir(a:Autoria)
    + listar() : list<Autoria>
    + listar_id(chave:tuple) : Autoria
    + atualizar(a:Autoria)
    + excluir(a:Autoria)
  }

  class ExemplarDAO {
    + inserir(e:Exemplar)
    + listar() : list<Exemplar>
    + listar_id(id:int) : Exemplar
    + atualizar(e:Exemplar)
    + excluir(e:Exemplar)
  }

  class EmprestimoDAO {
    + inserir(e:Emprestimo)
    + listar() : list<Emprestimo>
    + listar_id(id:int) : Emprestimo
    + atualizar(e:Emprestimo)
    + excluir(e:Emprestimo)
  }

  class MultaDAO {
    + inserir(m:Multa)
    + listar() : list<Multa>
    + listar_id(id:int) : Multa
    + atualizar(m:Multa)
    + excluir(m:Multa)
  }

  BibliotecarioDAO --|> DAO
  UsuarioDAO --|> DAO
  AutorDAO --|> DAO
  LivroDAO --|> DAO
  AutoriaDAO --|> DAO
  ExemplarDAO --|> DAO
  EmprestimoDAO --|> DAO
  MultaDAO --|> DAO
}

@enduml
